examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/unexpected_label_type.st
// ERROR_AMBIGUOUS_VARIANT_TYPE
language core;

extend with #variants, #unit-type;

fn main(succeed : Bool) -> <| value : Nat, failure : Unit |> {
  return
    if succeed
      then <| value = true |>
      else <| failure = unit |>
}//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
\n\n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
/n/n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
